--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="tab_text_1">Consultar</string>
     <string name="tab_text_2">Conta</string>
     <string name="tab_text_3">Home</string>
+    <string name="btn_conteudo">Acesso ao Contéudo Adicional</string>
+    <string name="btn_contato">Entre em contato</string>
+    <string name="btn_sobre">Informações do Projeto</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
